--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
